correzioni lab 1 e lab 3 e correzione frontespizi di tutte

--- a/Polymers lab/1/Polymers 1.tex
+++ b/Polymers lab/1/Polymers 1.tex
@@ -203,7 +203,7 @@ $
 \label{tab:code}
 \end{table}\\
 
-In Table \ref{tab:compos} the compositions of spheroids used for the calculations are reported.
+In Table \ref{tab:compos} the compositions of spheroids used for the calculations are reported. For each value, the percentage respect to spheroid mass is reported.
 \begin{table}[htp]
 \centering
 $
@@ -211,15 +211,16 @@ $
 \toprule
 & \textbf{P1} & \textbf{P2} & \textbf{P3}  \\
 \midrule
-\mathbf{m_{PMMA}}\,(\text{g}) & 20.62 & 21.66 & 8.69 \\
-\mathbf{m_{BaSO_4}}\,(\text{g}) & 3.18 & 3.34 & 1.34 \\
-\mathbf{m_{BPO}}\,(\text{g}) & 0.66 & 0.70 & 0.28 \\
-\mathbf{m_{MMA}}\,(\text{g}) & 8.35 & 10.73 & 3.55 \\
-\mathbf{m_{HEMA}}\,(\text{g}) & - & 2.74 & - \\
-\mathbf{m_{activator}}\,(\text{g}) & 0.075 & 0.08 & 0.03 \\
+\mathbf{m_{PMMA}}\,(\text{g}) & 20.62\ (62.7\%) & 21.65\ (55.2\%) & 8.69\ (62.6\%) \\
+\mathbf{m_{BaSO_4}}\,(\text{g}) & 3.18\ (9.7\%) & 3.34\ (8.5\%) & 1.34\ (9.6\%) \\
+\mathbf{m_{BPO}}\,(\text{g}) & 0.66\ (2\%) & 0.70\ (1.8\%) & 0.28\ (2\%) \\
+\mathbf{m_{MMA}}\,(\text{g}) & 8.35\ (25.4\%) & 10.72\ (27.3\%) & 3.55\ (25.5\%) \\
+\mathbf{m_{HEMA}}\,(\text{g}) & - & 2.74\ (7\%) & - \\
+\mathbf{m_{activator}}\,(\text{g}) & 0.075\ (0.2\%) & 0.08\ (0.2\%) & 0.03\ (0.2\%) \\
 \mathbf{m_{stabilizer}}\,(\text{ppm}) & 46.88 & 49.3 & 19.76 \\
 \midrule
-\mathbf{m_{spheroid}}\,(\text{g}) & 32.89 & 39.23 & 13.90 \\
+\mathbf{m_{spheroid}}\,(\text{g}) & 32.89 (100\%) & 39.23
+\ (100\%) & 13.90\ (100\%) \\
 \bottomrule
 \end{array}
 $
@@ -484,7 +485,7 @@ $
 \caption{Weight losses after drying.}
 \label{tab:dried}
 \end{table}\\
-The mass loss is related to the loss of unreacted monomer still present in the bone cement after three months. Of course a certain percent of it is present due to the always lower kinetics of polymerization in time, resulting in a certain degree of unreacted monomer even after very long times. The water soaking had the effect of taking place of the monomer inside the sample and diluting it in the solvent. During the drying process, the water containing the residual monomer has evaporated, resulting in a net mass loss of the samples, compared to the initial one just after polymerization. 
+The mass loss is related to the loss of unreacted monomer still present in the bone cement after three months. Of course a certain percent of it is present due to the always lower kinetics of polymerization in time, resulting in a certain degree of unreacted monomer even after very long times. The water soaking had the effect of taking place of the monomer inside the sample and diluting it in the solvent. During the drying process, water has evaporated, resulting in a net mass loss of the samples, compared to the initial one just after polymerization. 
 The mass loss in heat treated sample not containing HEMA (P1HT) is significantly less than the others, a sign that the heat treatment have accelerated the polymerization reaction and the residual unreacted monomer is less. Instead, the heat treated sample containing HEMA is not very representative due to the too high standard deviation. Presence of HEMA in P2 sample is less than the P1 not containing HEMA. 
 
 \section{Conclusions}
