--- a/Polymers lab/3/LAB 3.tex
+++ b/Polymers lab/3/LAB 3.tex
@@ -126,12 +126,12 @@ A wide selection of polymeric materials has been studied, particularly for hardn
 	\label{fig:rubber}
 \end{figure}
 \newpage
-Polypropylene has been deeply studied in its rheological properties, highlighting common properties like activation energy of viscous flow and die swelling. In Figure \ref{fig:melt} extrudates of polypropylene from melt flow index analysis are displayed. 
+Polypropylene has been deeply studied in its rheological properties, highlighting common properties like activation energy of viscous flow and die swelling. In Figure \ref{fig:melt} extrudates of polystyrene and polypropylene from melt flow index analysis are displayed. 
 \begin{figure}[h!]
 	\centering
 	{\includegraphics[scale=0.2]{melt}}
 	\captionsetup{justification=centering}
-	\caption{Extrudates of polypropylene from melt flow index analysis.}
+	\caption{Extrudates of polystyrene (left) and polypropylene (right) from melt flow index analysis.}
 	\label{fig:melt}
 \end{figure}\\
 Vicat analysis has been done on ready made samples of polycarbonate (PC), acrylonitrile-butadiene-styrene copolymer (ABS) and polypropylene (PP). In Figure \ref{fig:chem} chemical formulas of these polymers are reported. 
@@ -184,7 +184,7 @@ Different polymeric samples have been provided by University of Trento to get Vi
 	14,18,20,25,27 & \text{PU} & \text{TS}\\
 	15 & \text{Silicone} & \text{E}\\
 	16 & \text{ABS} & \text{TP}\\
-	17 & \text{PSA} & \text{TP}\\
+	17 & \text{SAN} & \text{TP}\\
 	19 & \text{PP} & \text{TP}\\
 	21 & \text{PTFE} & \text{TP}\\
 	22 & \text{COC} & \text{TP}\\
@@ -202,7 +202,8 @@ Three different polypropylene samples have been provided by different companies 
 	$
 	\begin{array}{llc}
 	\toprule
-	\textbf{Sample} & \textbf{Product name} & \textbf{Typical MFI} \\
+	\textbf{Sample} & \textbf{Product name} & \textbf{Typical MFI} \, \text{(g/10min)}  \\
+	& & (230^\circ \text{C, 2.16 kg}) \\
 	\midrule
 	\text{PP–1} & \text{PPH 7089} & 12\\
 	\text{PP–2} & \text{Moplen HP 500 N} & 5\\
@@ -213,6 +214,7 @@ Three different polypropylene samples have been provided by different companies 
 	\caption{Polypropylene materials used.}
 	\label{tab:PP}
 \end{table}
+\\
 For limit oxygen index analyses tested samples are PE, PP, PC and ABS plastics provided by University of Trento. 
 
 \subsection{Sample preparation}
@@ -225,7 +227,7 @@ An amount of granules for melt flow index analysis has been used in order to man
 
 \section{Experimental activity}
 
-\subsection{Vicat Softening Toughness analysis (VST)}
+\subsection{Vicat Softening Temperature analysis (VST)}
 
 The test has been carried out in two configurations, with instrument Vicat Tester MP/3 and according to the normative ASTM~\cite{VICAT}:
 
@@ -240,7 +242,7 @@ Polymers analyzed are: PC, ABS and PP. Samples dimensions are $1\times1$ cm and 
 
 \subsection{Melt flow index (MFI) measurement}
 
-Melt flow index (MFI) analysis has been carried out with the instrument Kayeness... According to ASTM standard, the typical test conditions for PP are temperature of $230 ^\circ$C and load of $2.16\  \text{kg}$. \\
+Melt flow index (MFI) analysis has been carried out with a Dynisco Melt Flow Indexer. According to ASTM standard, the typical test conditions for PP are temperature of $230 ^\circ$C and load of $2.16\  \text{kg}$. \\
 A first analysis has been conducted on PP–1 with 9 different configurations changing the temperature ($190 ^\circ$C, $210 ^\circ$C, $230 ^\circ$C) and changing the load ($2.16\ \text{kg}, 5.0\ \text{kg}, 7.06 \ \text{kg}$). \\
 A second analysis has been done on PP–2 at $230 ^\circ$C under loads of  $2.16\ \text{kg}$ and  $7.06\ \text{kg}$. \\
 A third analysis has been carried out on PP–3 at $230 ^\circ$C under $2.16\ \text{kg}$. \\
@@ -249,7 +251,7 @@ For each configuration six samples have been produced. The first one has been us
 \text{Die\ swell} = \bigg(\frac{D_\text{ex}}{D_\text{or}}\bigg)^2
 \label{eq:die}
 \end{equation}
-where $D_\text{ex}$ is the measured diameter of extrudate and $D_\text{or}$ is the diameter of the orefice defined by ASTM standard~\cite{MFI}. \\
+where $D_\text{ex}$ is the measured diameter of extrudate and $D_\text{or}$ is the diameter of the orifice (die) defined by ASTM standard~\cite{MFI}. \\
 The MFI has been calculated by Equation \ref{eq:mfi}: 
 \begin{equation}
 \text{MFI} = \frac{m_\text{ex}}{t}
@@ -275,7 +277,7 @@ From reference handbook~\cite{handbook} specific values of MFI in function of mo
 	\bottomrule
 	\end{array}
 	$
-	\caption{MFI in function of molecular weight of PP .}
+	\caption{MFI in function of molecular weight of PP according to literature~\cite{handbook} .}
 	\label{tab:mw}
 \end{table}
 
@@ -297,7 +299,7 @@ Two different scales have been employed:
 
 \end{itemize}
 
-Different polymeric specimens have been tested: for each, three mesurements has been carried out with a waiting time of three seconds. Analyzed polymers are reported in the following Table \ref{tab:polymers}.
+Different polymeric specimens have been tested: for each, three mesurements has been carried out with a waiting time of three seconds. Analyzed polymers are reported in the previous Table \ref{tab:polymers}.
 
 \subsection{Limit oxygen index (LOI) measurement}
 
@@ -376,7 +378,7 @@ In Figure \ref{fig:dieswell} die swell measurements for PP-1 sample in function 
 	\label{fig:dieswell}
 \end{figure}\\
 From Figure \ref{fig:dieswell} it can be noticed that die swell increases with the applied load. This can be explained by the fact that higher loads means higher pressures and consequently, when the material exits from the die, it will present a higher relaxation of tensions thus a higher die swelling. Moreover it can be observed that die swell is not affected by the increment of temperature. The experimental data in figure \ref{fig:dieswell} follow a linear behaviour and the intercepts from the regression lines give us the value of the die swell without any load applied. These values can be related to the effect of temperature on swelling.
-In Table \ref{dieswell} the values of intercepts and slopes with their standard deviations are reported.
+In Table \ref{tab:dieswell1} the values of intercepts and slopes with their standard deviations are reported.
 \begin{table}[htp]
 	\centering
 	$
@@ -391,7 +393,7 @@ In Table \ref{dieswell} the values of intercepts and slopes with their standard 
 	\end{array}
 	$
 	\caption{Die swelling, results of interpolation.}
-	\label{tab:dieswell}
+	\label{tab:dieswell1}
 \end{table}\\
 It is known that a rise in temperature can increase the rate of stress relaxation, leading to a decrease in extrudate swell. Moreover, a reduction of viscosity caused by an increase in temperature contributes to a decrease in extrudate swell, because of a reduction in stress applied to polymer molecules.
 Therefore, there is a competition between these two effects; in fact, an increase in applied load decreases the die swell while increasing the temperature, the swell reduces.~\cite{swell}
@@ -454,7 +456,7 @@ $
 \bottomrule
 \end{array}
 $
-\caption{Die swell values of three types of PP. See data in Appendix C}
+\caption{Die swell values of three types of PPs. See raw data in Appendix C}
 \label{tab:dieswell}
 \end{table}\\
 It can be seen that the higher the molecular weight the lower die swell values. High molecular weight means longer chains and this leads to high possibility of orientation and consequently a less expansion of diameter at the die exit.
@@ -499,7 +501,7 @@ The results of the experiment are reported in Figure \ref{fig:duro}:
 	\centering
 	{\includegraphics[scale=0.3]{duro}}
 	\captionsetup{justification=centering}
-	\caption{Hardness values comparison. For ref. data see Appendix D.}
+	\caption{Hardness values comparison. For raw data see Appendix D.}
 	\label{fig:duro}
 \end{figure}
 
@@ -526,7 +528,7 @@ The following Table \ref{tab:loi} reports the main results obtained by this test
 	\label{tab:loi}
 \end{table}
 
-PC sample reacts with a higher amount of blowed oxygen, meaning that this polymer is less flammable than the others.
+PC sample reacts with a higher amount of flushed oxygen, meaning that this polymer is less flammable than the others.
  
 \section{Conclusions}
 
@@ -542,7 +544,7 @@ The LOI is the minimum oxygen percentage needed to ignite a polymer bar which wi
 
 \begin{thebibliography}{1}
 
-\bibitem{handbook} Polymer handbook, J. Brandrup, E.H. Immergut, fourth edition, Wiley 2003.
+\bibitem{handbook} Polymer handbook, J. Brandrup, E.H. Immergut, third edition, New York, Wiley \& Sons 2003.
 \bibitem{MFI} ASTM D1238–10 “Melt flow rates of thermoplastics by extrusion”. 
 \bibitem{LOI} ASTM D2863–06a “Standard test method for measuring the minimum oxygen concentration to support candle-like combustion of plastics”.
 \bibitem{VICAT} ASTM D1525 “Standard test method for Vicat softening temperature of plastics”
