--- a/Polymers lab/4/lab 4.tex
+++ b/Polymers lab/4/lab 4.tex
@@ -124,13 +124,13 @@ For injection compounding 40 g of the mixture have been weighed. In this case th
 
 \subsection{Compression molding}
 
-Prepared amount of polypropylene mixture has been used for compression molding process. A press by Carver has been used, as illustrated in Figure \ref{fig:press}. 
+Prepared amount of polypropylene mixture has been used for compression molding process. A press by Carver has been used, as illustrated in Figure \ref{fig:press1}. 
 \begin{figure}[htp]
 	\centering
 	\includegraphics[scale=0.2]
 	{PHOTO-2019-05-23-17-38-03.jpg}
-	\label{fig:press}
 	\caption{Carver press for compression molding.}
+	\label{fig:press1}
 \end{figure}\\
 The material to be pressed is put between two stainless steel plates, one having a frame of $12\times 12\, \text{mm}^2$ in order to produce a square plate of some mm of thickness. To avoid any adhesion with the plates, that are used to evenly distribute the pressure and to confine the melt (since the press is able to provide heat), two Mylar${^\text{\textregistered}}$ foils have been put in between the steel and the material. The press has been set to produce a pressure of 8 tons, equivalent to 5.45 MPa, in the frame. The material has undergone an heat treatment under this pressure of 200°C for 10 minutes. After this, the press has been cooled with water circulating in a refrigerating circuit inside of it and the molded piece extracted. Produced plate is then visually analyzed and weighted in order to estimate weight losses. \par 
 
@@ -142,10 +142,10 @@ The process has been carried out with the instrument Thermo Haake Rheomix 600, w
 	\centering
 	\includegraphics[scale=0.3]
 	{PHOTO-2019-05-23-17-37-35.jpg}
-	\label{fig:rheo}
 	\caption{Rheomix 600 after usage. Remains of polypropylene mixture are visible.}
+	\label{fig:rheo}
 \end{figure}\\
-The product obtained by this process has then been subjected to compression molding, using the same parameters as Plate 1. Tangential speed of the compounder is estimated to 0.082 m/s.
+The product obtained (Figure \ref{fig:rheo}) by this process has then been subjected to compression molding, using the same parameters as Plate 1. Tangential speed of the compounder is estimated to 0.082 m/s.
 
 \subsubsection{Production of dumbbell specimens}
 
@@ -237,8 +237,8 @@ The mold before and after pressing is reported in Figure \ref{fig:beforeafter}.
 	{\includegraphics[scale=0.2]{PHOTO-2019-05-23-17-38-02.jpg}} \qquad 
 	\subfloat[][]
 	{\includegraphics[scale=0.2]{PHOTO-2019-05-23-17-38-6.jpg}}
-	\label{fig:beforeafter}
 	\caption{Mold (a) before and (b) after compression.}
+	\label{fig:beforeafter}
 \end{figure}
 
 The produced plate after manual mixing is illustrated in Figure \ref{fig:plate1}. 
@@ -247,8 +247,8 @@ The produced plate after manual mixing is illustrated in Figure \ref{fig:plate1}
 	\centering
 	\includegraphics[scale=0.2]
 	{PHOTO-2019-05-23-17-38-7.jpg}
-	\label{fig:plate1}
 	\caption{Plate produced in compression molding.}
+	\label{fig:plate1}
 \end{figure}
 
 As it can be easily noted, the distribution of black PP in the white one is absolutely non-homogeneous, typical consequence of a manual mixing of the pellets (without any homogenization mixing in between). The other evident property of the pressed plate is the flash of melt outside of the mold: this is due to the too high amount of polymer inserted in the mold. 
@@ -276,8 +276,8 @@ A comparison between plates after compression molding si reported in Figure \ref
 	\centering
 	\includegraphics[scale=0.4]
 	{PIATTI.jpg}
-	\label{fig:plates}
 	\caption{Compressed plates: plate 1 (from pellets) at left and plate 2 (from compounding) at right.}
+	\label{fig:plates}
 \end{figure}\\
 It can be seen that subjecting the sample to compounding before compression molding, a better homogeneity can  be reached.
 The weights of the product before and after compression are reported in Table \ref{tab:weights_comparison}.
@@ -313,15 +313,16 @@ In Figure \ref{fig:spec}-a the dumbbell specimens produced in compression moldin
 	\subfloat[][]
 	{\includegraphics[scale=0.4]
 	{PHOTO-2019-05-23-17-37-13.jpg}} 
-	\label{fig:spec}
 	\caption{Produced specimens from compression molding plate after compounding.}
+	\label{fig:spec}
 \end{figure}
 
+These specimens have been then used during laboratory activity of Prof. Pegoretti for flexural tests in order to evaluate their mechanical properties according to ISO 527 standard.
 \newpage
 
 \subsection{Injection molding: sample evaluation}
 
-ISO specimens are reported in Figure \ref{fig:ISO}.
+ISO type specimens are reported in Figure \ref{fig:ISO}.
 
 \begin{figure}[htp]
 \centering
@@ -345,15 +346,15 @@ In Table \ref{tab:ISO} different types of ISO specimens are classified with thei
 \begin{table}[htp]
 \centering
 $
-\begin{array}{llll}
+\begin{array}{lllcl}
 \toprule
-\textbf{Figure} & \textbf{Material} & \textbf{Size}\,(\text{mm}) & \textbf{Description} \\
+\textbf{Figure} & \textbf{Material} & \textbf{Size}\,(\text{mm}) & \textbf{Weight}\,(\text{g}) & \textbf{Description} \\
 \midrule
-\text{a} & \text{POM} & 9.74\times 3.94\times 167.06 & \text{white and presence of cold junction}\\
-\text{b} & \text{PA11} & 9.86\times 4.05\times 168.98 & \text{opaque and white}\\
-\text{c} & \text{PP-GF30} & 9.88\times 4.00\times 172.11 & \text{white and stiff}\\
-\text{d} & \text{PP-GF35} & 9.80\times 4.00\times 171.86 & \text{black and stiff}\\
-\text{e} & \text{PA6-GF50} & 9.99\times 3.98\times 154.71 & \text{very stiff}\\
+\text{a} & \text{POM} & 9.74\times 3.94\times 167.06 & - & \text{white and presence of cold junction}\\
+\text{b} & \text{PA11} & 9.86\times 4.05\times 168.98 & - & \text{opaque and white}\\
+\text{c} & \text{PP-GF30} & 9.88\times 4.00\times 172.11 & 10.30 & \text{white and stiff}\\
+\text{d} & \text{PP-GF35} & 9.80\times 4.00\times 171.86 & 10.72 & \text{black and stiff}\\
+\text{e} & \text{PA6-GF50} & 9.99\times 3.98\times 154.71 & 12.91 & \text{very stiff}\\
 \bottomrule
 \end{array}
 $
@@ -361,7 +362,8 @@ $
 \label{tab:ISO}
 \end{table}
 
-In Table \ref{tab:shISO} the values of the shrinkage of ISO samples are reported.
+It can be noticed that the higher the amount of glass fibers in the polymer, the higher is the weight of specimen. \\
+In Table \ref{tab:shISO} the values of the shrinkage (according to Equation \ref{eq:shr}) of ISO type samples are reported.
 
 \begin{table}[h!]
 \centering
@@ -383,7 +385,7 @@ $
 
 From Table \ref{tab:shISO} it can be noticed that in reinforced polymers the shrinkage is very small, almost negligible. The presence of glass fibers gives to polymers better dimensional stability during cooling. 
 
-ASTM specimens are reported in Figure \ref{fig:ASTM}.
+ASTM type specimens (containing dumbell, sprue and plate) are reported in Figure \ref{fig:ASTM}.
 
 \begin{figure}[htp]
 \centering
@@ -414,10 +416,10 @@ $
 \midrule
 \text{a} & \text{ABS} & 14.78 & 12.77\times 3.27\times 163.55 & \text{grey and flexible}\\
 \text{b} & \text{COC} & 14.07 & 12.64\times 3.30\times 164.04 & \text{transparent and glassy}\\
-\text{c} & \text{PP} & 12.28 & 12.6\times 3.35\times 162.29 & \text{opaque and flexible} \\
-\text{d} & \text{HDPE} & 12.73 & 12.54\times 3.33\times 160.0 & \text{yellow and very flexible} \\
+\text{c} & \text{PP} & 12.28 & 12.60\times 3.35\times 162.29 & \text{opaque and flexible} \\
+\text{d} & \text{HDPE} & 12.73 & 12.54\times 3.33\times 160.00 & \text{yellow and very flexible} \\
 \text{e} & \text{PE/PP}\ \text{blend} & 13.30 & 12.66\times 3.31\times 161.58 & \text{matt black and flexible} \\
-\text{f} & \text{PA11} & 14.00 & 12.6\times 3.35\times 162.29 & \text{very similar to PP} \\
+\text{f} & \text{PA11} & 14.00 & 12.60\times 3.35\times 162.29 & \text{very similar to PP} \\
 \bottomrule
 \end{array}
 $
@@ -428,7 +430,7 @@ $
 
 \newpage
 
-In Table \ref{tab:shASTM} the values of the shrinkage of ASTM samples are reported.
+In Table \ref{tab:shASTM} the values of the shrinkage of ASTM samples (containing dumbell, sprue and plate) are reported, following Equation \ref{eq:shr}.
 
 \begin{table}[htp]
 \centering
@@ -464,9 +466,9 @@ $
 \midrule
 \text{ABS} & 14.78 & 1.04-1.12  \\
 \text{COC} & 14.07 & 1.02 \\
-\text{PP} & 12.28 & 0.85-0.94 \\
+\text{PP} & 12.28 & 0.905-0.94 \\
 \text{HDPE} & 12.73 & 0.93-0.97 \\
-\text{PE/PP blend} & 13.30 & 0.86-0.95 \\
+\text{PE/PP blend} & 13.30 & 0.90-0.95 \\
 \text{PA11} & 14.00 & 1.04 \\
 \bottomrule
 \end{array}
@@ -481,7 +483,7 @@ For PE/PP blend it has been considered a blend constituted by PE/PP $50\%$. From
 
 \subsection{Filament analysis}
 
-Diameter and titer measurements are reported in Table \ref{tab:titer}.
+Diameter and titer measurements are reported in Table \ref{tab:titer} according to Equation \ref{eq:titer}.
 \begin{table}[htp]
 \centering
 $
@@ -502,7 +504,7 @@ $
 \label{tab:titer}
 \end{table}
 
-Tenacities before and after drawing are reported in Table \ref{tab:tenacity}.
+Tenacities before and after drawing are reported in Table \ref{tab:tenacity} following Equations \ref{eq:DR}, \ref{eq:tenacity}, \ref{eq:tenacity2}, \ref{eq:sigma}.
 \begin{table}[htp]
 \centering
 $
@@ -520,16 +522,16 @@ $
 \end{array}
 $
 \caption{Diameters and fineness measurements of collected fibers.}
-\label{tab:titer}
+\label{tab:tenacity}
 \end{table}
 
-Accordingly to literature~\cite{encyclopedia} high strength PP fibers can reach values of 2.6 GPa and 3.5\% deformation at break. Since tensile strength and deformation at break follow a hyperbolic envelope, by fitting these data with the generic equation of the hyperbole (only parameter is a constant), the following can be found, expressed in Figure \ref{fig:hyperbole}.
+Accordingly to literature~\cite{handbook} high strength PP fibers can reach values of 2.6 GPa and 3.5\% deformation at break. Since tensile strength and deformation at break follow a hyperbolic envelope, by fitting these data with the generic equation of the hyperbole (only parameter is a constant), the following can be found, expressed in Figure \ref{fig:hyperbole}.
 \begin{figure}[htp]
 	\centering
 	\includegraphics[scale=0.15]
 	{hyperbole.png}
-	\label{fig:hyperbole}
 	\caption{Stress-strain relation for PP fibers.}
+	\label{fig:hyperbole}
 \end{figure}
 
 \section{Conclusions}
@@ -537,10 +539,10 @@ Accordingly to literature~\cite{encyclopedia} high strength PP fibers can reach 
 
 There are different polymer processing techniques. In this laboratory session compression molding and compouding techniques were used and samples produced by injection molding were analyzed.
 Several observations were made by examining the samples produced, in order to correlate the process parameters with the properties of the materials.
-We have seen that a sample will be more homogeneous if subjected to compounding before compression molding; from the evaluation of samples produced by injection molding, the presence or not of shrinkage will be an index of the dimensional stability of the polymer or if it is a crystalline rather than an amorphous one; finally, by measuring the diameter of a fiber it is possible to predict some mechanical properties of the fiber itself.
+It has been seen that a sample will be more homogeneous if subjected to compounding before compression molding; from the evaluation of samples produced by injection molding, the presence or not of shrinkage will be an index of the dimensional stability of the polymer or if it is a crystalline rather than an amorphous one; finally, by measuring the diameter of a fiber it is possible to predict some mechanical properties of the fiber itself.
 
 \begin{thebibliography}{1}
 
-\bibitem{handbook} Polymer handbook, J. Brandrup, E.H. Immergut, fourth edition, Wiley 2003.
+\bibitem{handbook} Polymer handbook, J. Brandrup, E.H. Immergut, third edition, New York, Wiley \& Sons 2003.
 \end{thebibliography}
 \end{document}
