modifiche lab 4 e lab 1

--- a/Polymers lab/1/Polymers 1.tex
+++ b/Polymers lab/1/Polymers 1.tex
@@ -497,6 +497,10 @@ In the second polymerization the heat released during the reaction is higher tha
 
 \begin{appendices}
 
+\section{Weights of components of medical kit}
+
+
+
 \section{Heat treatement weight measurements}
 
 \begin{table}[htp]
@@ -517,6 +521,9 @@ In the second polymerization the heat released during the reaction is higher tha
 	\label{tab:weight}
 \end{table}
 Where ${m_{i}}$ is the mass of samples before heat treatment and ${m_{f}}$ is the mass of samples after heat treatment.
+
+
+\section{Water absorption weight measurements}
 
 \end{appendices}
 
