--- a/Polymers lab/2/Lab 2.tex
+++ b/Polymers lab/2/Lab 2.tex
@@ -143,7 +143,7 @@ PE is a semicrystalline polymer and due to its low glass transition temperature 
 	\captionsetup{justification=centering}
 	\label{fig:PE}
 \end{figure}
-PS presents an aromatic ring in his structure that leads to a steric envelope responsable of the low mobility of the chain. Therefore it's an amorphous and rigid polymer.
+PS presents an aromatic ring in his structure that leads to a steric envelope responsable of the low mobility of the chain. Therefore it's an amorphous and rigid polymer in the typically found atactic configuration, known as a-PS.
 
 \begin{figure}[htp]
 	\centering
@@ -225,33 +225,33 @@ PMMA  is a transparent thermoplastic non-cross linked polymer often used as a li
 
 \newpage 
 
-\section{Materials and methods}
+\section{Materials}
 
 \subsection{Materials}
 
-The polymeric materials that have been used are: plastic yogurt cup (PS), disposable coffee stick (PS), plastic coffee cup (PS), plastic water bottle (PET), plastic bottle cap (PE), plastic cups (PS, PP, PLA), disposable spoon (PS) and tire piece. In Table \ref{tab:tgtm} main properties of the analyzed polymers are reported. 
+The polymeric materials that have been used are: plastic yogurt cup (PS), disposable coffee stick (PS), plastic coffee cup (PS), plastic water bottle (PET), plastic bottle cap (PE), plastic cups (PS, PP, PLA), disposable spoon (PS), polymethyl methacrylate (PMMA) bone cement~\cite{gruppo1} and tire piece. In Table \ref{tab:tgtm} main properties of the analyzed polymers are reported. 
 \begin{table}[htp]
 	\centering
 	$
-	\begin{array}{lcccc}
+	\begin{array}{lccccc}
 	\toprule
-	\textbf{Materials} &  \mathbf{Density}\, (\text{g/cm}^3)  & \mathbf{T_{g}} (^\circ\text{C}) \ & \mathbf{T_{m}}(^\circ\text{C}) & \bm{\Delta} \mathbf{H_m} (\text{J/g}) \\
+	\textbf{Materials} & & \mathbf{Density}\, (\text{g/cm}^3)  & \mathbf{T_{g}} (^\circ\text{C}) \ & \mathbf{T_{m}}(^\circ\text{C}) & \bm{\Delta} \mathbf{H_m} (\text{J/g}) \\
 	\midrule
-	\text{High density polyethylene (PE)} & 0.95 & \text{-}110 & 138 & -\\
-	\\
-	\text{Polystyrene (PS)} & 1.04^{(a)} & 100 & - & 86.54  \\
-	& 1.11 ^{(c)} & & & \\
-	\text{Polypropylene (PP)} & 0.85 ^{(a)} & \text{-}10  & 165  & 209\\
-	& 0.94 ^{(c)} & & & \\
-	\text{Polyethylene terephthalate (PET)} & 1.33 ^{(a)} & 70 & 265 & 140 \\
-	& 1.51 ^{(c)} & & & \\
-	\text{Polylactic acid (PLA)} & 1.21 ^{(a)} & 50 & 140 & 93.65\\
-	& 1.30 ^{(c)} & & & \\
-	\text{Polymethyl methacrylate (PMMA)} & 1.18 & 105  & - & -\\
+	\text{Polyethylene (PE)} & a & 0.86 & -110 & 138 & 277.1\\
+	& c & 1.00 & & & 280.5 \\
+	\text{Polystyrene (PS)} & a & 1.04& 100 & - & -  \\
+	& c & 1.11 & & 240 & 86.5 \\
+	\text{Isotactic polypropylene (i-PP)} & a & 0.85 & -10  & 165  & -\\
+	& c & 0.94 & & & 207 \\
+	\text{Polyethylene terephthalate (PET)} & a & 1.33 & 70 & 265 & - \\
+	& c & 1.51 & & & 140 \\
+	\text{Polylactic acid (PLA)} & a & 1.25 & 63 & 178 & -\\
+	& c & 1.29 & & & 92.8 \\
+	\text{Polymethyl methacrylate (PMMA)} & a & 1.19 & 105  & - & -\\
 	\bottomrule
 	\end{array}
 	$
-	\caption{Some properties of used materials where: \\ (a) 100\% amorphous and (c) 100\% crystalline.}
+	\caption{Some properties of used materials where: \\ (a) 100\% amorphous and (c) 100\% crystalline. All values taken from literature~\cite{handbook}.}
 	\label{tab:tgtm}
 \end{table}\\
 Tire samples have been provided by Marangoni (Rovereto (TN), Italy) and are mainly composed by styrene-butadiene rubber (SBR), carbon black, sulfur, accellerators and other additives. All the others objects used in the experimental activity have been provided by University of Trento. \par
