--- a/Polymers lab/1/G1- LAB 1 FINAL.tex
+++ b/Polymers lab/1/G1- LAB 1 FINAL.tex
@@ -499,7 +499,34 @@ In the second polymerization the heat released during the reaction is higher tha
 
 \section{Weights of components of medical kit}
 
+\begin{table}[htp]
+\centering
+$
+\begin{array}{lccc}
+\toprule
+\textbf{Constituents}& \textbf{P1} & \textbf{P2} & \textbf{P3}\\
+\midrule
+\text{PMMA} & 32.98\,  \text{g} & 32.94\,  \text{g} & 33.00\, \text{g}  \\
+\text{BaSO}4 & 5.09\,  \text{g} & 5.08\,  \text{g} & 5.09\, \text{g}\\
+\text{BPO} & 1.05\,  \text{g} & 1.06\,  \text{g} & 1.06\, \text{g}\\
+\midrule
+\text{Powder mass} & 39.12\,  \text{g} & 39.08\,  \text{g} & 39.15\, \text{g} \\
+\midrule
+\text{MMA} & 13.36\, \text{g} & 13.50\,  \text{g} & 13.48\, \text{g}\\
+\text{N-N dimethyl-p-toluidine} & 0.12\,  \text{g} & 0.12\,  \text{g} & 0.12\, \text{g}\\
+\text{Hydroquinone} & 75\, \text{ppm} & 75\, \text{ppm} & 75\, \text{ppm}\\
 
+\midrule
+\text{Liquid mass} & 13.48\, \text{g} & 13.62\, \text{g} & 13.60\, \text{g}\\
+\midrule
+\text{MMA}\,\text{added} & -  & 2.82\, \text{g} & - \\
+\text{HEMA} & - &\, 4.16\, \text{g} & - \\
+\bottomrule
+\end{array}
+$
+\caption{Raw data of constituents mass from the three polimerizations (P1, P2, P3).}
+\label{tab:rawd}
+\end{table}
 
 \section{Heat treatement weight measurements}
 
@@ -522,9 +549,35 @@ In the second polymerization the heat released during the reaction is higher tha
 \end{table}
 Where ${m_{i}}$ is the mass of samples before heat treatment and ${m_{f}}$ is the mass of samples after heat treatment.
 
-
+\newpage
 \section{Water absorption weight measurements}
-
+\begin{table}[htp]
+\centering
+$
+\begin{array}{lccccccc}
+\toprule
+\textbf{Samples} & \textbf{initial}\,\textbf{mass}\,(\text{g}) & \textbf{mass}\,(\text{g}) & \textbf{mass}\,(\text{g}) & \textbf{mass}\,(\text{g}) & \textbf{mass}\,(\text{g}) & \textbf{mass}\,(\text{g}) & \textbf{dried mass}\,(\text{g}) \\
+& & (\textbf{02/27}) & (\textbf{02/28}) & (\textbf{03/4}) & (\textbf{03/14}) & (\textbf{04/17}) & (\textbf{05/27})\\
+\midrule
+\text{P1A} & 3.1649 & 3.1909 & 3.1924 & 3.2300 & 3.2418 & 3.2444 & 3.1386\\
+\text{P1B} & 2.6498 & 2.6693 & 2.6734 & 2.6979 & 2.7104 & 2.7153 & 2.6407\\
+\text{P1C} & 2.1841 & 2.1958 & 2.2012 & 2.2139 & 2.2232 & 2.2312 & 2.1765\\
+\text{P1D} & 4.6149 & 4.6307 & 4.6569 & 4.6758 & 4.6785 & 4.7138 & 4.5776\\
+\text{P1S} & 32.8233 & 32.9362 & 32.9855 & 33.0518 & 33.0538 & 33.2481 & 32.7942\\
+\midrule
+\text{P2A} & 3.0555 & 3.0735 & 3.0816 & 3.1054 & 3.1180 & 3.1514 & 3.0402\\
+\text{P2B} & 3.0969 & 3.1102 & 3.1201 & 3.1331 & 3.1546 & 3.1727 & 3.0880\\
+\text{P2C} & 2.3304 & 2.3438 & 2.3470 & 2.3631 & 2.3706 & 2.3496 & 2.2804\\
+\text{P2D} & 2.2242 & 2.2414 & 2.2464 & 2.2665 & 2.2844 & 2.2900 & 2.2056\\
+\text{P2S} & 39.2043 & 39.3005  & 39.3193 & 39.4130 & 39.4838 & 37.7000 & 39.2102\\
+\midrule
+\text{P3S} & 13.6395 & 13.8572 & 13.9050 & 13.9340 & 13.9481 & 14.0244 & 13.5887\\
+\bottomrule
+\end{array}
+$
+\caption{Values of mass for each samples of the three polimerizations in function of time (month/day).}
+\label{tab:water}
+\end{table}
 \end{appendices}
 
 \newpage
