altre modifiche lab 3 and lab 4

--- a/Polymers lab/3/LAB 3.tex
+++ b/Polymers lab/3/LAB 3.tex
@@ -473,7 +473,7 @@ In the following Figure \ref{fig:arrhenius} the chart of MFI measurements (Arrhe
 	\caption{MFI chart (Arrhenius plot) for PP–1 sample.}
 	\label{fig:arrhenius}
 \end{figure}\\
-Figure \ref{fig:arrhenius} shows the relation between the MFI and the reciprocal of the temperature. In Table \ref{tab:energy} the values of activation energy are reported.
+Figure \ref{fig:arrhenius} shows the relation between the MFI and the reciprocal of the temperature. In Table \ref{tab:energy} the values of activation energy of PP-1 are reported.
 \begin{table}[htp]
 \centering
 $
@@ -489,7 +489,7 @@ $
 \bottomrule
 \end{array}
 $
-\caption{Activation energy.}
+\caption{Activation energy for PP-1.}
 \label{tab:energy}
 \end{table}
 
@@ -548,6 +548,7 @@ The LOI is the minimum oxygen percentage needed to ignite a polymer bar which wi
 \bibitem{MFI} ASTM D1238–10 “Melt flow rates of thermoplastics by extrusion”. 
 \bibitem{LOI} ASTM D2863–06a “Standard test method for measuring the minimum oxygen concentration to support candle-like combustion of plastics”.
 \bibitem{VICAT} ASTM D1525 “Standard test method for Vicat softening temperature of plastics”
+\bibitem{SHORE} ASTM D2240 Type A and Type D “Standard test method for rubber property”
 \bibitem{swell} A review of extrudate swell in polymers - C. Sirisinha – J.Sci.Soc.Thailand 23-259-280
 
 \end{thebibliography}
