--- a/Polymers lab/4/lab 4.tex
+++ b/Polymers lab/4/lab 4.tex
@@ -406,7 +406,7 @@ $
 
 From Table \ref{tab:shISO} it can be noticed that in reinforced polymers the shrinkage is very small, almost negligible. The presence of glass fibers gives to polymers better dimensional stability during cooling. 
 
-ASTM type specimens (containing dumbell, sprue and plate) are reported in Figure \ref{fig:ASTM}.
+ASTM type specimens (containing dumbbell, sprue and plate) are reported in Figure \ref{fig:ASTM}.
 
 \begin{figure}[htp]
 \centering
@@ -451,7 +451,7 @@ $
 
 \newpage
 
-In Table \ref{tab:shASTM} the values of the shrinkage of ASTM samples (containing dumbell, sprue and plate) are reported, following Equation \ref{eq:shr}.
+In Table \ref{tab:shASTM} the values of the shrinkage of ASTM samples (containing dumbbell, sprue and plate) are reported, following Equation \ref{eq:shr}.
 
 \begin{table}[htp]
 \centering
@@ -586,7 +586,7 @@ $
 \end{array}
 $
 \caption{Technical datasheet of PP (HiRONlen V15 Black).}
-\label{tab:hironlen}
+\label{tab:flame}
 \end{table}
 \end{appendices}
 
