--- a/Polymers lab/2/G1-LAB 2 FINAL.tex
+++ b/Polymers lab/2/G1-LAB 2 FINAL.tex
@@ -632,7 +632,29 @@ $
 \caption{TGA results for all samples. $T_d$ is representative of the maximum rate of mass loss.}
 \label{tab:tga}
 \end{table}\\
-Moreover, it has been evaluated the amount of natural and synthetic rubber present in the sample looking at the thermogram and its derivative: the derivative shows two peaks and the thermogram shows a slight difference in the slope, corresponding to the degradation of the two components. The amount has been extimated as 30\% of natural rubber and 70\% as synthetic rubber. These values of mass losses are comparable with the usal compostion of the tire.
+Moreover, it has been evaluated the amount of natural and synthetic rubber present in the sample looking at the thermogram and its derivative: the derivative shows two peaks and the thermogram shows a slight difference in the slope, corresponding to the degradation of the two components. The amount has been extimated as 30\% of natural rubber and 70\% as synthetic rubber. These values of mass losses are comparable with the usal compostion of the tire. \\
+In Table\ref{tab:phr} the values of phr for the tire analyzed are reported.
+
+\begin{table}[htp]
+\centering
+$
+\begin{array}{ccc}
+\toprule
+\textbf{Components} & \textbf{phr} \\
+\midrule
+\text{Process oil} & 15 \\
+\text{NR} & 38\\
+\text{SBR} & 70 \\
+\text{Carbon black} & 55 \\
+\text{Ash}& 3\\
+\midrule
+\text {Total phr}& 181\\
+\bottomrule
+\end{array}
+$
+\caption{Values of phr for the tire analyzed.}
+\label{tab:phr}
+\end{table}
 
 \subsection{Solvent effect}
 
