--- a/Polymers lab/4/G1- LAB 4 FINAL.tex
+++ b/Polymers lab/4/G1- LAB 4 FINAL.tex
@@ -217,7 +217,7 @@ ASTM samples (with sprue and bar) have been weighted through the balance Mettler
 \subsection{Filament analysis}
 
 Different fibers provided by University of Trento (polypropylene, see Materials and Methods) have been analyzed: in particular the diameter of six different filament samples have been measured in order to predict their mechanical properties in function of the draw ratio and the process parameters. 
-Diameters have been taken using micrometer \textbf{[modello]}. The filament linear density (titer, fineness) is calculated accordingly to the Equation \ref{eq:titer}. 
+Diameters have been taken using micrometer. The filament linear density (titer, fineness) is calculated accordingly to the Equation \ref{eq:titer}. 
 \begin{equation}
 	t = \rho \cdot A
 	\label{eq:titer}
@@ -476,7 +476,7 @@ $
 From Table \ref{tab:shASTM} it can be observed that semycristalline polymers (such as PP, HDPE, PA11) have higher values of shrinkage respect to amourphous polymers (such ABS and COC). Amorphous polymers have random arrangement of molecules that produces little volume changes thus lower shrinkage. \\
 The higher values of longitudinal shrinkage in semycristalline polymers are partially compensated by the increase of the thickness (negative values of thickness shrinkage).
 
-In Table \ref{tab:pesi} and in figure \ref{fig:Graph1} weights and densities of ASTM samples are reported.
+In Table \ref{tab:pesi} and in Figure \ref{fig:wd} weights and densities of ASTM samples are reported.
 
 \begin{table}[htp]
 \centering
@@ -500,10 +500,9 @@ $
 
 \begin{figure}[htp]
 	\centering
-	\includegraphics[scale=0.3]
-	{Graph1}
-	\label{fig:Graph1}
-	\caption{Weight vs Density of ASTM samples}
+	\includegraphics[scale=0.3]{Graph1}
+	\caption{Weight and density of ASTM samples.}
+	\label{fig:wd}
 \end{figure}
 
 For PE/PP blend it has been considered a blend constituted by PE/PP $50\%$. From Table \ref{tab:pesi} it can be noticed that, for the same volume, weights of samples are in accordance with values of densities taken from literature~\cite{handbook}. 
