--- a/Polymers lab/3/LAB 3.tex
+++ b/Polymers lab/3/LAB 3.tex
@@ -428,7 +428,7 @@ The Figure \ref{fig:mw} shows that increasing MFI the molecular weight decreases
 \text{MFI} = 1091\cdot \exp({-2.729\cdot 10^{-05}\cdot\text{MW}})
 \label{eq:mw}
 \end{equation}
-The Figure \ref{fig:mw} shows that increasing MFI the molecular weight decreases exponentially.\\ In Table \ref{tab:mw} the values of MFI and molecular weight are reported for the three types of PP evaluted at $230 ^\circ$C under $2.16$ \text{kg}.
+In Table \ref{tab:mw} the values of MFI and molecular weight are reported for the three types of PP evaluted at $230 ^\circ$C under $2.16$ \text{kg}.
 \begin{table}[htp]
 \centering
 $
